src/objects/Feature_Switch__c.object
<CustomObject>
    <description>an object that represents a feature and whether it is currently active in sandboxes and Live</description>
    <fields>
        <fullName>Already_deleted_from_code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Already deleted from code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demo_approved_by__c</fullName>
        <label>Demo approved by</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JIRATicket__c</fullName>
        <label>Link to JIRA Ticket</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <label>Release Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Release_Notes__c</fullName>
        <label>Release Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Training_Notes__c</fullName>
        <label>Training Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UAT_Approved_by__c</fullName>
        <label>UAT Approved by</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>readyForQA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready for QA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>readyForRelease__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready for Release</label>
        <type>Checkbox</type>
    </fields>
    <label>Feature Switch</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>JIRATicket__c</columns>
        <columns>readyForQA__c</columns>
        <columns>readyForRelease__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feature Switches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>